探究简单的线性网络

--- a/number_cls.ipynb
+++ b/number_cls.ipynb
@@ -315,6 +315,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./pic/1705472401299.jpg\" width=200>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -349,6 +356,13 @@
     "经过上述代码可以看到，模型的线性连接层确实就是加权求和  \n",
     "训练中，大概400个epoch就拟合了  \n",
     "为了证明非线性activation的有效性，下面用一层网络替代"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### validate activation"
    ]
   },
   {
@@ -410,6 +424,13 @@
     "    if (epoch + 1) % 1000 == 0:\n",
     "        print(f'Epoch {epoch+1}/{epochs}, Loss: {total_loss/len(x)}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为拟合的有点慢，所以就加大训练次数，最后发现损失也是稳定在0.119，证明了activation的实用性"
+   ]
   }
  ],
  "metadata": {
@@ -428,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
